--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -972,7 +972,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #1fcaa7;
+			background-color: #3494e5;
 		}
 
 		input[type="submit"]:active,
@@ -980,7 +980,7 @@
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: #199e83;
+			background-color: #77c1ff;
 		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
